--- a/01-introducao/exercicio/02-exercicio.html
+++ b/01-introducao/exercicio/02-exercicio.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>imprime nome</title>
+    <title>Primeira Pagina em Java Script</title>
+        
 </head>
 <body>
-
     <script>
-        document.write("<h1>GABRIEL</h1><h2>CRUZ</h2>");
+        document.write('<h1 style="font-family:verdana; color: red;>Primeira Pagina em Java Script</h1>')
     </script>
 </body>
 </html>
