--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
-<html>
-    <title>
-    </title>
-    <body>
-        <h1>hello world</h1>
-    </body>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Validação de CPF</title>
+</head>
+<body>
+    <h1>Validação de CPF</h1>
+    <p>Insira um numero de </p>
+</body>
 </html>
